lab/stages/stage-02-rbac/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: stage-02-rbac
  labels:
    lab.vuln-mlops/stage: "02"
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
